--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <header>
       <nav>
         <a>
-          <img src="nerds-logo.png" width="159.87" height="65" alt="Логотип дизайн-студии Нёрдс">
+          <img src="img/nerds-logo.png" width="159.87" height="65" alt="Логотип дизайн-студии Нёрдс">
         </a>
         <ul>
-          <li><a href="blank.html"></a>Студия</li>
-          <li><a href="blank.html"></a>Клиенты</li>
-          <li><a href="catalog.html"></a>Магазин</li>
-          <li><a href="blank.html"></a>Контакты</li>
+          <li><a href="blank.html">Студия</a></li>
+          <li><a href="blank.html">Клиенты</a></li>
+          <li><a href="catalog.html">Магазин</a></li>
+          <li><a href="blank.html">Контакты</a></li>
         </ul>
         <a href="blank.html">Корзина</a>
       </nav>
@@ -32,7 +32,7 @@
             <p>Долго, дорого, скрупулезно.</p>
             <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
             <button type="button">Узнать больше</button>
-            <img src="nerds-index-slide1.png" width="760" height="431" alt="Слайдер: красивый интерфейс на мобильных">
+            <img src="img/nerds-index-slide1.png" width="760" height="431" alt="Слайдер: красивый интерфейс на мобильных">
           </li>
           <li><!--content slide 2--></li>
           <li><!--content slide 3--></li>
@@ -43,19 +43,19 @@
         <h2>Направления работы</h2>
         <ul>
           <li>
-            <img src="illustration-1.png" width="300" height="146" alt="Иллюстрация Веб-сайты">
+            <img src="img/illustration-1.png" width="300" height="146" alt="Иллюстрация Веб-сайты">
             <h3>Веб-сайты</h3>
             <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
             <button type="button">Заказать</button>
           </li>
           <li>
-            <img src="illustration-2.png" width="300" height="146" alt="Иллюстрация Приложения">
+            <img src="img/illustration-2.png" width="300" height="146" alt="Иллюстрация Приложения">
             <h3>Приложения</h3>
             <p>Покорите топ-10 приложений в AppStore и Google Play</p>
             <button type="button">Заказать</button>
           </li>
           <li>
-            <img src="illustration-3.png" width="300" height="146" alt="Иллюстрация Презентации">
+            <img src="img/illustration-3.png" width="300" height="146" alt="Иллюстрация Презентации">
             <h3>Презентации</h3>
             <p>Вы даже не подозреваете, насколько вы изумительны!</p>
             <button type="button">Заказать</button>
@@ -78,7 +78,7 @@
       </section>
 
       <section>
-        <img src="nerds-illustration.png" width="360" height="208" alt="Иллюстрация Нёрдс">
+        <img src="img/nerds-illustration.png" width="360" height="208" alt="Иллюстрация Нёрдс">
         <p>С 2004 года любим точность во всем:</p>
         <table>
           <tr>
@@ -99,17 +99,16 @@
       <section>
         <ul>
           <li>
-            <a href="https://htmlacademy.ru/intensive/htmlcss"></a>
-            <img src="logo.svg" width="199" height="67,82" alt="Логотип HTML Academy">
+            <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo.svg" width="199" height="67,82" alt="Логотип HTML Academy"></a>
           </li>
           <li>
-            <img src="logo-2.png" width="209" height="90" alt="Логотип Barbershop Brodski">
+            <img src="img/logo-2.png" width="209" height="90" alt="Логотип Barbershop Brodski">
           </li>
           <li>
-            <img src="logo-3.png" width="185" height="52" alt="Логотип PINK">
+            <img src="img/logo-3.png" width="185" height="52" alt="Логотип PINK">
           </li>
           <li>
-            <img src="logo-4.png" width="173" height="84" alt="Логотип Mishka">
+            <img src="img/logo-4.png" width="173" height="84" alt="Логотип Mishka">
           </li>
         </ul>
       </section>
@@ -118,10 +117,10 @@
     <footer>
       <section>
         <h3>NЁRDS DESIGN STUDIO</h3>
-        <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <p>191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</p>
         <p>  тел. +7 (812) 275-75-75</p>
         <button type="button">Напишите нам</button>
-        <img src="map-marker.png" width="231" height="190" alt="Местоположение Нёрдс">
+        <img src="img/map-marker.png" width="231" height="190" alt="Местоположение Нёрдс">
         <!--Здесь будет карта-->
       </section>
 
