--- a/blank.html
+++ b/blank.html
@@ -10,13 +10,13 @@
     <header>
       <nav>
         <a>
-          <img src="nerds-logo.png" width="159.87" height="65" alt="Логотип дизайн-студии Нёрдс">
+          <img src="img/nerds-logo.png" width="159.87" height="65" alt="Логотип дизайн-студии Нёрдс">
         </a>
         <ul>
-          <li><a href="blank.html"></a>Студия</li>
-          <li><a href="blank.html"></a>Клиенты</li>
-          <li><a href="catalog.html"></a>Магазин</li>
-          <li><a href="blank.html"></a>Контакты</li>
+          <li><a href="blank.html">Студия</a></li>
+          <li><a href="blank.html">Клиенты</a></li>
+          <li><a href="catalog.html">Магазин</a></li>
+          <li><a href="blank.html">Контакты</a></li>
         </ul>
         <a href="blank.html">Корзина</a>
       </nav>
@@ -30,10 +30,10 @@
       <section>
         <!--Здесь будет карта-->
         <h3>NЁRDS DESIGN STUDIO</h3>
-        <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <p>191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</p>
         <p>  тел. +7 (812) 275-75-75</p>
         <button type="button">Напишите нам</button>
-        <img src="map-marker.png" width="231" height="190" alt="Местоположение Нёрдс">
+        <img src="img/map-marker.png" width="231" height="190" alt="Местоположение Нёрдс">
       </section>
 
       <section>
