--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <nav>
         <a>
-          <img src="img/nerds-logo.png" width="159.87" height="65" alt="Логотип дизайн-студии Нёрдс">
+          <img src="img/nerds-logo.png" width="160" height="65" alt="Логотип дизайн-студии Нёрдс">
         </a>
         <ul>
           <li><a href="blank.html">Студия</a></li>
@@ -26,127 +26,132 @@
       <h1>Дизайн-студия Нёрдс</h1>
 
       <section>
-        <h2>Главный слайдер</h2>
-        <ul>
-          <li>
-            <p>Долго, дорого, скрупулезно.</p>
-            <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
-            <button type="button">Узнать больше</button>
-            <img src="img/nerds-index-slide1.png" width="760" height="431" alt="Слайдер: красивый интерфейс на мобильных">
-          </li>
-          <li><!--content slide 2--></li>
-          <li><!--content slide 3--></li>
-        </ul>
+        <div>
+          <h2>Главный слайдер</h2>
+          <ul>
+            <li>
+              <div style="background-image: url(img/nerds-index-slide1.png);">
+                <p>Долго, дорого, скрупулезно.</p>
+                <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
+                <a href="blank.html"><button type="button">Узнать больше</button></a>
+              </div>
+            </li>
+            <li><!--content slide 2--></li>
+            <li><!--content slide 3--></li>
+          </ul>
+        </div>
       </section>
 
       <section>
-        <h2>Направления работы</h2>
-        <ul>
-          <li>
-            <img src="img/illustration-1.png" width="300" height="146" alt="Иллюстрация Веб-сайты">
-            <h3>Веб-сайты</h3>
-            <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-            <button type="button">Заказать</button>
-          </li>
-          <li>
-            <img src="img/illustration-2.png" width="300" height="146" alt="Иллюстрация Приложения">
-            <h3>Приложения</h3>
-            <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-            <button type="button">Заказать</button>
-          </li>
-          <li>
-            <img src="img/illustration-3.png" width="300" height="146" alt="Иллюстрация Презентации">
-            <h3>Презентации</h3>
-            <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-            <button type="button">Заказать</button>
-          </li>
-        </ul>
-      </section>
-
-      <hr>
-
-      <section>
-        <h2>О дизайн-студии Нёрдс</h2>
-        <p>Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
-        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-        <p>Выполняем заказы на разработку:</p>
-        <ul>
-          <li>Веб-сайтов любой сложности</li>
-          <li>Мобильных приложений для iOS и Android</li>
-          <li>Слайдшоу и видео для корпоративных презентаций</li>
-        </ul>
+        <div>
+          <h2>Направления работы</h2>
+          <ul>
+            <li>
+              <img src="img/illustration-1.png" width="300" height="146" alt="Иллюстрация Веб-сайты">
+              <h3>Веб-сайты</h3>
+              <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+              <button type="button">Заказать</button>
+            </li>
+            <li>
+              <img src="img/illustration-2.png" width="300" height="146" alt="Иллюстрация Приложения">
+              <h3>Приложения</h3>
+              <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+              <button type="button">Заказать</button>
+            </li>
+            <li>
+              <img src="img/illustration-3.png" width="300" height="146" alt="Иллюстрация Презентации">
+              <h3>Презентации</h3>
+              <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+              <button type="button">Заказать</button>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section>
-        <img src="img/nerds-illustration.png" width="360" height="208" alt="Иллюстрация Нёрдс">
-        <p>С 2004 года любим точность во всем:</p>
-        <table>
-          <tr>
-            <td>146%</td>
-            <td>100%</td>
-            <td>50%</td>
-          </tr>
-          <tr>
-            <td>Уровень самоотдачи</td>
-            <td>Соблюдение сроков</td>
-            <td>Минималная предоплата</td>
-          </tr>
-        </table>
+        <div>
+          <h2>О дизайн-студии Нёрдс</h2>
+          <p>Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
+          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+          <h3>Выполняем заказы на разработку:</h3>
+          <ul>
+            <li>Веб-сайтов любой сложности</li>
+            <li>Мобильных приложений для iOS и Android</li>
+            <li>Слайдшоу и видео для корпоративных презентаций</li>
+          </ul>
+          <img src="img/nerds-illustration.png" width="360" height="208" alt="Иллюстрация Нёрдс">
+          <p>С 2004 года любим точность во всем:</p>
+          <ul>
+            <li>
+              <p>146%<p>
+              <p>Уровень самоотдачи</p>
+            </li>
+            <li>
+              <p>100%<p>
+              <p>Соблюдение сроков</p>
+            </li>
+            <li>
+              <p>50%<p>
+              <p>Минимальная предоплата</p>
+            </li>
+          </ul>
+        </div>
       </section>
-
-      <hr>
 
       <section>
-        <ul>
-          <li>
-            <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo.svg" width="199" height="67,82" alt="Логотип HTML Academy"></a>
-          </li>
-          <li>
-            <img src="img/logo-2.png" width="209" height="90" alt="Логотип Barbershop Brodski">
-          </li>
-          <li>
-            <img src="img/logo-3.png" width="185" height="52" alt="Логотип PINK">
-          </li>
-          <li>
-            <img src="img/logo-4.png" width="173" height="84" alt="Логотип Mishka">
-          </li>
-        </ul>
+        <div>
+          <ul>
+            <li>
+              <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo.svg" width="199" height="67,82" alt="Логотип HTML Academy"></a>
+            </li>
+            <li>
+              <a href="#"><img src="img/logo-2.png" width="209" height="90" alt="Логотип Barbershop Brodski"></a>
+            </li>
+            <li>
+              <a href="#"><img src="img/logo-3.png" width="185" height="52" alt="Логотип PINK"></a>
+            </li>
+            <li>
+              <a href="#"><img src="img/logo-4.png" width="173" height="84" alt="Логотип Mishka"></a>
+            </li>
+          </ul>
+        </div>
       </section>
-
-      <hr>
-      
     </main>
 
     <footer>
       <section>
-        <h3>NЁRDS DESIGN STUDIO</h3>
-        <p>191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</p>
-        <p>  тел. +7 (812) 275-75-75</p>
-        <button type="button">Напишите нам</button>
-        <img src="img/map-marker.png" width="231" height="190" alt="Местоположение Нёрдс">
-        <!--Здесь будет карта-->
+        <div>
+          <h3>NЁRDS DESIGN STUDIO</h3>
+          <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          <p>тел. +7 (812) 275-75-75</p>
+          <a href="blank.html" class="btn">Напишите нам</a>
+          <img src="img/map-marker.png" width="231" height="190" alt="Местоположение Нёрдс">
+          <!--Здесь будет карта-->
+        </div>
       </section>
 
       <section>
-        <ul>
-          <li>
-            <a href="#">Вконтакте</a>
-          </li>
-          <li>
-            <a href="#">Facebook</a>
-          </li>
-          <li>
-            <a href="#">Instagram</a>
-          </li>
-        </ul>
+        <div>
+          <ul>
+            <li>
+              <a href="#">Вконтакте</a>
+            </li>
+            <li>
+              <a href="#">Facebook</a>
+            </li>
+            <li>
+              <a href="#">Instagram</a>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section>
-        <p>Давайте дружить, это выгодно!</p>
-        <p>Скидка 10% для друзей из социальных сетей.</p>
+        <div>
+          <p>Давайте дружить, это выгодно!</p>
+          <p>Скидка 10% для друзей из социальных сетей.</p>
+        </div>
       </section>
     </footer>
-
   </body>
-
 </html>
