--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <div style="background-image: url(img/nerds-index-slide1.png);">
                 <p>Долго, дорого, скрупулезно.</p>
                 <p>Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.</p>
-                <a href="blank.html"><button type="button">Узнать больше</button></a>
+                <a href="blank.html">Узнать больше</a>
               </div>
             </li>
             <li><!--content slide 2--></li>
@@ -71,49 +71,53 @@
       <section>
         <div>
           <h2>О дизайн-студии Нёрдс</h2>
-          <p>Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
-          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-          <h3>Выполняем заказы на разработку:</h3>
-          <ul>
-            <li>Веб-сайтов любой сложности</li>
-            <li>Мобильных приложений для iOS и Android</li>
-            <li>Слайдшоу и видео для корпоративных презентаций</li>
-          </ul>
-          <img src="img/nerds-illustration.png" width="360" height="208" alt="Иллюстрация Нёрдс">
-          <p>С 2004 года любим точность во всем:</p>
-          <ul>
-            <li>
-              <p>146%<p>
-              <p>Уровень самоотдачи</p>
-            </li>
-            <li>
-              <p>100%<p>
-              <p>Соблюдение сроков</p>
-            </li>
-            <li>
-              <p>50%<p>
-              <p>Минимальная предоплата</p>
-            </li>
-          </ul>
-        </div>
-      </section>
+          <div>
+            <p>Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
+            <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+            <h3>Выполняем заказы на разработку:</h3>
+            <ul>
+              <li>Веб-сайтов любой сложности</li>
+              <li>Мобильных приложений для iOS и Android</li>
+              <li>Слайдшоу и видео для корпоративных презентаций</li>
+            </ul>
+          </div>
 
-      <section>
-        <div>
-          <ul>
-            <li>
-              <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo.svg" width="199" height="67,82" alt="Логотип HTML Academy"></a>
-            </li>
-            <li>
-              <a href="#"><img src="img/logo-2.png" width="209" height="90" alt="Логотип Barbershop Brodski"></a>
-            </li>
-            <li>
-              <a href="#"><img src="img/logo-3.png" width="185" height="52" alt="Логотип PINK"></a>
-            </li>
-            <li>
-              <a href="#"><img src="img/logo-4.png" width="173" height="84" alt="Логотип Mishka"></a>
-            </li>
-          </ul>
+          <div>
+            <img src="img/nerds-illustration.png" width="360" height="208" alt="Иллюстрация Нёрдс">
+            <p>С 2004 года любим точность во всем:</p>
+            <ul>
+              <li>
+                <p>146%</p>
+                <p>Уровень самоотдачи</p>
+              </li>
+              <li>
+                <p>100%</p>
+                <p>Соблюдение сроков</p>
+              </li>
+              <li>
+                <p>50%</p>
+                <p>Минимальная предоплата</p>
+              </li>
+            </ul>
+          </div>
+
+          <div>
+            <ul>
+              <li>
+                <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo.svg" width="199" height="68" alt="Логотип HTML Academy"></a>
+              </li>
+              <li>
+                <a href="#"><img src="img/logo-2.png" width="209" height="90" alt="Логотип Barbershop Brodski"></a>
+              </li>
+              <li>
+                <a href="#"><img src="img/logo-3.png" width="185" height="52" alt="Логотип PINK"></a>
+              </li>
+              <li>
+                <a href="#"><img src="img/logo-4.png" width="173" height="84" alt="Логотип Mishka"></a>
+              </li>
+            </ul>
+          </div>
+
         </div>
       </section>
     </main>
@@ -121,35 +125,33 @@
     <footer>
       <section>
         <div>
-          <h3>NЁRDS DESIGN STUDIO</h3>
-          <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-          <p>тел. +7 (812) 275-75-75</p>
-          <a href="blank.html" class="btn">Напишите нам</a>
-          <img src="img/map-marker.png" width="231" height="190" alt="Местоположение Нёрдс">
-          <!--Здесь будет карта-->
-        </div>
-      </section>
+          <div>
+            <h3>NЁRDS DESIGN STUDIO</h3>
+            <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+            <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
+            <a href="blank.html">Напишите нам</a>
+            <img src="img/map-marker.png" width="231" height="190" alt="Местоположение Нёрдс">
+            <!--Здесь будет карта-->
+          </div>
 
-      <section>
-        <div>
-          <ul>
-            <li>
-              <a href="#">Вконтакте</a>
-            </li>
-            <li>
-              <a href="#">Facebook</a>
-            </li>
-            <li>
-              <a href="#">Instagram</a>
-            </li>
-          </ul>
-        </div>
-      </section>
+          <div>
+            <ul>
+              <li>
+                <a href="#">Вконтакте</a>
+              </li>
+              <li>
+                <a href="#">Facebook</a>
+              </li>
+              <li>
+                <a href="#">Instagram</a>
+              </li>
+            </ul>
+          </div>
 
-      <section>
-        <div>
-          <p>Давайте дружить, это выгодно!</p>
-          <p>Скидка 10% для друзей из социальных сетей.</p>
+          <div>
+            <p>Давайте дружить, это выгодно!</p>
+            <p>Скидка 10% для друзей из социальных сетей.</p>
+          </div>
         </div>
       </section>
     </footer>
