--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <li>
               <img src="img/illustration-3.png" width="300" height="146" alt="Иллюстрация Презентации">
               <h3>Презентации</h3>
-              <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+              <p>Вы даже не подозреваете, насколько вы изумительны!</p>
               <button type="button">Заказать</button>
             </li>
           </ul>
@@ -101,22 +101,20 @@
             </ul>
           </div>
 
-          <div>
-            <ul>
-              <li>
-                <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo.svg" width="199" height="68" alt="Логотип HTML Academy"></a>
-              </li>
-              <li>
-                <a href="#"><img src="img/logo-2.png" width="209" height="90" alt="Логотип Barbershop Brodski"></a>
-              </li>
-              <li>
-                <a href="#"><img src="img/logo-3.png" width="185" height="52" alt="Логотип PINK"></a>
-              </li>
-              <li>
-                <a href="#"><img src="img/logo-4.png" width="173" height="84" alt="Логотип Mishka"></a>
-              </li>
-            </ul>
-          </div>
+          <ul>
+            <li>
+              <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo.svg" width="199" height="68" alt="Логотип HTML Academy"></a>
+            </li>
+            <li>
+              <a href="#"><img src="img/logo-2.png" width="209" height="90" alt="Логотип Barbershop Brodski"></a>
+            </li>
+            <li>
+              <a href="#"><img src="img/logo-3.png" width="185" height="52" alt="Логотип PINK"></a>
+            </li>
+            <li>
+              <a href="#"><img src="img/logo-4.png" width="173" height="84" alt="Логотип Mishka"></a>
+            </li>
+          </ul>
 
         </div>
       </section>
@@ -124,34 +122,31 @@
 
     <footer>
       <section>
+        <!--Здесь будет карта-->
         <div>
-          <div>
-            <h3>NЁRDS DESIGN STUDIO</h3>
-            <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-            <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
-            <a href="blank.html">Напишите нам</a>
-            <img src="img/map-marker.png" width="231" height="190" alt="Местоположение Нёрдс">
-            <!--Здесь будет карта-->
-          </div>
+          <h3>NЁRDS DESIGN STUDIO</h3>
+          <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+          <a href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
+          <a href="blank.html">Напишите нам</a>
+          <img src="img/map-marker.png" width="231" height="190" alt="Местоположение Нёрдс">
+        </div>
+      </section>
 
-          <div>
-            <ul>
-              <li>
-                <a href="#">Вконтакте</a>
-              </li>
-              <li>
-                <a href="#">Facebook</a>
-              </li>
-              <li>
-                <a href="#">Instagram</a>
-              </li>
-            </ul>
-          </div>
-
-          <div>
-            <p>Давайте дружить, это выгодно!</p>
-            <p>Скидка 10% для друзей из социальных сетей.</p>
-          </div>
+      <section>
+        <ul>
+          <li>
+            <a href="#">Вконтакте</a>
+          </li>
+          <li>
+            <a href="#">Facebook</a>
+          </li>
+          <li>
+            <a href="#">Instagram</a>
+          </li>
+        </ul>
+        <div>
+          <p>Давайте дружить, это выгодно!</p>
+          <p>Скидка 10% для друзей из социальных сетей.</p>
         </div>
       </section>
     </footer>
