--- a/catalog.html
+++ b/catalog.html
@@ -25,68 +25,83 @@
     <main>
       <h1>Магазин готовых шаблонов</h1>
 
-      <form>
-        <h2>Фильтр проектов</h2>
-        <!--Здесь будет форма фильтра-->
-      </form>
+      <div>
+        <form>
+          <h2>Фильтр проектов</h2>
+          <!--Здесь будет форма фильтра-->
+        </form>
+      </div>
 
       <section>
-        <form>
+        <div>
           <h2>Сортировка проектов</h2>
-          <!--Здесь будет форма сортировки-->
-        </form>
+          <p>Сортировать:</p>
+          <ul>
+            <li>По цене</li>
+            <li>По типу</li>
+            <li>По названию</li>
+            <li>▼</li>
+            <li>▲</li>
+          </ul>
+        </div>
 
 
         <div>
           <h2>Список проектов</h2>
           <ul>
             <li>
-              <a href="blank.html" class="active">
-                <img src="img/img-sedona.jpg" width="358" height="576" alt="Шаблон туристического сайта">
-              </a>
-              <h3>SEDONA</h3>
-              <p>Информационный сайт<br>для туристов</p>
-              <button type="button">9 900₽</button>
+              <div class="grey_block"></div>
+              <img src="img/img-sedona.jpg" width="358" height="576" alt="Шаблон туристического сайта">
+              <div>
+                <h3><a href="blank.html" class="active">SEDONA</a></h3>
+                <p>Информационный сайт<br>для туристов</p>
+                <button type="button">9 900₽</button>
+              </div>
             </li>
             <li>
-              <a href="blank.html">
-                <img src="img/img-pink.png" width="358" height="576" alt="Шаблон лендинга о приложении">
-              </a>
-              <h3>Pink app</h3>
-              <p>Продуктовый лендинг<br> приложения для iOS и Android</p>
-              <button type="button">9 900₽</button>
+              <div class="grey_block"></div>
+              <img src="img/img-pink.png" width="358" height="576" alt="Шаблон лендинга о приложении">
+              <div>
+                <h3><a href="blank.html">Pink app</a></h3>
+                <p>Продуктовый лендинг<br> приложения для iOS и Android</p>
+                <button type="button">9 900₽</button>
+              </div>
             </li>
             <li>
-              <a href="blank.html">
-                <img src="img/img-barbershop.jpg" width="364" height="582" alt="Шаблон для барбершопа">
-              </a>
-              <h3>Barbershop</h3>
-              <p>Сайт салона красоты. <br>Для мужчин, да.</p>
-              <button type="button">9 900₽</button>
+              <div class="grey_block"></div>
+              <img src="img/img-barbershop.jpg" width="364" height="582" alt="Шаблон для барбершопа">
+              <div>
+                <h3><a href="blank.html">Barbershop</a></h3>
+                <p>Сайт салона красоты. <br>Для мужчин, да.</p>
+                <button type="button">9 900₽</button>
+              </div>
             </li>
             <li>
-              <a href="blank.html">
-                <img src="img/img-mishka.jpg" width="358" height="574" alt="Шаблон интернет-магазина игрушек">
-              </a>
-              <h3>Mishka</h3>
-              <p>Интернет-магазин<br>вязаных игрушек</p>
-              <button type="button">9 900₽</button>
+              <div class="grey_block"></div>
+              <img src="img/img-mishka.jpg" width="358" height="574" alt="Шаблон интернет-магазина игрушек">
+              <div>
+                <h3><a href="blank.html">Mishka</a></h3>
+                <p>Интернет-магазин<br>вязаных игрушек</p>
+                <button type="button">9 900₽</button>
+              </div>
             </li>
             <li>
-              <a href="blank.html">
-                <img src="img/img-aplus.jpg" width="358" height="573" alt="Шаблон лендинга курсов">
-              </a>
-              <h3>A Plus</h3>
-              <p>Лендинг курсов<br>повышения квалификации</p>
-              <button type="button">9 900₽</button>
+              <div class="grey_block"></div>
+              <img src="img/img-aplus.jpg" width="358" height="573" alt="Шаблон лендинга курсов">
+              <div>
+                <h3><a href="blank.html">A Plus</a></h3>
+                <p>Лендинг курсов<br>повышения квалификации</p>
+                <button type="button">9 900₽</button>
+              </div>
             </li>
             <li>
-              <a href="blank.html">
-                <img src="img/img-kvast.jpg" width="358" height="573" alt="Шаблон промо-сайта о квасе">
-              </a>
-              <h3>Kvas</h3>
-              <p>Промо-сайт производителя <br>крафтового кваса</p>
-              <button type="button">9 900₽</button>
+              <div class="grey_block"></div>
+              <img src="img/img-kvast.jpg" width="358" height="573" alt="Шаблон промо-сайта о квасе">
+              <div>
+                <h3><a href="blank.html">Kvas</a></h3>
+                <p>Промо-сайт производителя <br>крафтового кваса</p>
+                <button type="button">9 900₽</button>
+              </div>
             </li>
           </ul>
         </div>
