--- a/catalog.html
+++ b/catalog.html
@@ -37,11 +37,11 @@
           <h2>Сортировка проектов</h2>
           <p>Сортировать:</p>
           <ul>
-            <li>По цене</li>
-            <li>По типу</li>
-            <li>По названию</li>
-            <li>▼</li>
-            <li>▲</li>
+            <li><a href="blank.html">По цене</a></li>
+            <li><a href="blank.html">По типу</a></li>
+            <li><a href="blank.html">По названию</a></li>
+            <li><a href="blank.html">▼</a></li>
+            <li><a href="blank.html">▲</a></li>
           </ul>
         </div>
 
