--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@
       <section class="footer-social">
         <ul class="footer-social-icons">
           <li>
-            <a href="#">Вконтакте</a>
+            <a href="#" alt="Вконтакте"></a>
           </li>
           <li>
-            <a href="#">Facebook</a>
+            <a href="#" alt="Facebook"></a>
           </li>
           <li>
-            <a href="#">Instagram</a>
+            <a href="#" alt="Instagram"></a>
           </li>
         </ul>
         <div class="footer-social-partner">
