--- a/index.html
+++ b/index.html
@@ -160,10 +160,18 @@
             </a>
           </li>
           <li>
-            <a href="#" alt="Facebook">FB</a>
+            <a href="#" alt="Facebook">
+              <svg width="12" height="22" viewBox="0 0 12 22">
+                <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white"/>
+              </svg>
+            </a>
           </li>
           <li>
-            <a href="#" alt="Instagram">IG</a>
+            <a href="#" alt="Instagram">
+              <svg width="21" height="21" viewBox="0 0 21 21">
+                <path d="M3 0H18C19.65 0 21 1.35 21 3V18C21 19.65 19.65 21 18 21H3C1.35 21 0 19.65 0 18V3C0 1.35 1.35 0 3 0ZM14 10.5C14 8.57 12.43 7 10.5 7C8.57 7 7 8.57 7 10.5C7 12.43 8.57 14 10.5 14C12.43 14 14 12.43 14 10.5ZM3 18V9H4.181C4.0626 9.49127 4.00186 9.99467 4 10.5C4 14.0899 6.91015 17 10.5 17C14.0899 17 17 14.0899 17 10.5C16.9986 9.99464 16.9379 9.49118 16.819 9H18V18H3ZM14 7H18V3H14V7Z" fill="white"/>
+              </svg>
+            </a>
           </li>
         </ul>
         <div class="footer-social-partner">
