--- a/index.html
+++ b/index.html
@@ -127,16 +127,16 @@
 
           <ul class="logotypes-list">
             <li class="logotypes-item">
-              <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo.png" width="199" height="68" alt="Логотип HTML Academy"></a>
+              <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-black.png" width="199" height="68" alt="Логотип HTML Academy"></a>
             </li>
             <li class="logotypes-item">
-              <a href="#"><img src="img/logo-2.png" width="209" height="90" alt="Логотип Barbershop Brodski"></a>
+              <a href="#"><img src="img/logo-2-black.png" width="209" height="90" alt="Логотип Barbershop Brodski"></a>
             </li>
             <li class="logotypes-item">
-              <a href="#"><img src="img/logo-3.png" width="185" height="52" alt="Логотип PINK"></a>
+              <a href="#"><img src="img/logo-3-black.png" width="185" height="52" alt="Логотип PINK"></a>
             </li>
             <li class="logotypes-item">
-              <a href="#"><img src="img/logo-4.png" width="173" height="84" alt="Логотип Mishka"></a>
+              <a href="#"><img src="img/logo-4-black.png" width="173" height="84" alt="Логотип Mishka"></a>
             </li>
           </ul>
 
