--- a/catalog.html
+++ b/catalog.html
@@ -169,10 +169,10 @@
           </div>
 
           <ul class="pagination-list">
-            <li class="pagination-item pagination-item-current"><a>1</a></li>
-            <li class="pagination-item"><a href="#">2</a></li>
-            <li class="pagination-item"><a href="#">3</a></li>
-            <li class="pagination-item pagination-item-next"><a href="#">Следующая</a></li>
+            <li><a class="pagination-item pagination-item-current">1</a></li>
+            <li><a class="pagination-item" href="#">2</a></li>
+            <li><a class="pagination-item" href="#">3</a></li>
+            <li><a class="pagination-item pagination-item-next" href="#">Следующая</a></li>
           </ul>
         </section>
       </div>
