--- a/catalog.html
+++ b/catalog.html
@@ -185,7 +185,7 @@
           <h3>NЁRDS DESIGN STUDIO</h3>
           <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
           <a class="footer-phone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
-          <a class="button map-button" href="blank.html"><span class="button-text">Напишите нам</span></a>
+          <a class="button" href="blank.html"><span class="button-text map-button">Напишите нам</span></a>
           <img src="img/map-marker.png" width="231" height="190" alt="Местоположение Нёрдс">
         </div>
       </section>
