--- a/catalog.html
+++ b/catalog.html
@@ -122,7 +122,7 @@
               </li>
               <li class="projects-item">
                 <div class="projects-grey-block"></div>
-                <img src="img/img-pink.png" width="358" height="576" alt="Шаблон лендинга о приложении">
+                <img src="img/img-pink.jpg" width="358" height="576" alt="Шаблон лендинга о приложении">
                 <div class="project-info">
                   <h3><a href="blank.html" class="project-heading">Pink app</a></h3>
                   <p class="project-text">Продуктовый лендинг<br> приложения для iOS и Android</p>
@@ -237,7 +237,7 @@
           <label for="modal-text" class="modal-item-label">Тест письма:</label>
           <input id="modal-text" type="text" name="text" placeholder="В свободной форме" class="modal-item-input">
         </p>
-        <button class="button" type="submit"><span class="button-text">Отправить</span></button>
+        <button class="button" type="submit"><span class="button-text button-modal">Отправить</span></button>
       </form>
       <button type="button" class="button-close-cross">Закрыть</button>
     </section>
