--- a/catalog.html
+++ b/catalog.html
@@ -46,6 +46,7 @@
             <div>
               <legend class="filter-legend">Стоимость:</legend>
               <input type="range" min="0" max="15000">
+              <p>от <span class="filter-legend-value">0</span> до <span class="filter-legend-value">15 000</span></p>
             </div>
             <div>
               <legend class="filter-legend">Сетка:</legend>
