--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,7 @@
         <ul class="site-navigation">
           <li><a href="blank.html">Студия</a></li>
           <li><a href="blank.html">Клиенты</a></li>
-          <li><a href="catalog.html">Магазин</a></li>
+          <li><a href="catalog.html" class="site-navigation-current">Магазин</a></li>
           <li><a href="blank.html">Контакты</a></li>
         </ul>
         <div class="cart-navigation">
@@ -100,10 +100,10 @@
             <h2 class="sort-title">Сортировка проектов</h2>
             <p class="sort-legend">Сортировать:</p>
             <ul class="sort-list">
-              <li><a href="blank.html" class="sort-item">По цене</a></li>
+              <li><a href="blank.html" class="sort-item sort-item-current">По цене</a></li>
               <li><a href="blank.html" class="sort-item">По типу</a></li>
               <li><a href="blank.html" class="sort-item">По названию</a></li>
-              <li><a href="blank.html" class="sort-item"><svg width="11" height="10" viewBox="0 0 11 10" class="icon-down"><path d="M5.5 10L0 0H11"/></svg></a></li>
+              <li><a href="blank.html" class="sort-item sort-item-current"><svg width="11" height="10" viewBox="0 0 11 10" class="icon-down"><path d="M5.5 10L0 0H11"/></svg></a></li>
               <li><a href="blank.html" class="sort-item"><svg width="11" height="10" viewBox="0 0 11 10" class="icon-up"><path d="M5.5 0L0 10H11L5.5 0Z"/></svg></a></li>
             </ul>
           </div>
